Fix for some affix jumpyness issues wip

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -18,8 +18,11 @@ div.event-row {
 
 .affix {
   position: fixed;
-   top: 0px;
-   right: 0px;
+  top: 0px;
+  right: 0;
+  left: 0;
+  box-shadow: rgba(0,0,0,0.2) 0 1px 2px;
+  opacity: .7;
 }
 
 .stickyicky {
